# ml-training-airflow-mlflow-example

./: .dockerignore  .gitignore  README.md  docker-compose.yml
.github/workflows/: push.yaml
audio_classifier/: CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
audio_classifier/src/audio_classifier/: config.py  dataset.py  layers.py  models.py
audio_classifier/src/audio_classifier/utils/: preprocess.py
audio_classifier/tests/: conftest.py  test_config.py  test_dataset.py  test_layers.py  test_models.py  test_utils_preprocess.py
audio_classifier/tests/data/datasets/test/1/: train-index.csv  train.tfrecords
dags/: ml_pipeline_config.json  ml_pipeline_dag.py  model-config.yaml  test_dag.py
data/: README.md
data/datasets/MNIST-audio/1/: train-index.csv  train.tfrecords  validation-index.csv  validation.tfrecords
docker/: Dockerfile.airflow  Dockerfile.mlflow  Dockerfile.playground
env_files/: compose.env  secrets.env
scripts/infra/: start_jupyter_nb.sh  start_mlflow.sh  start_server.sh
scripts/ml/: preprocess_audio.py  train.py
scripts/ml/configs/: config-2.yaml
